src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  .no-tailwindcss-base, .no-tailwindcss-base * , .no-tailwindcss-base > * {
      font-size: revert;
      font-weight: revert;
      color: revert;
      margin: revert;
      display: revert;
      vertical-align: revert;
      max-width: revert;
      height: revert;
      border-width: revert;
      border-style: revert;
      border-color: revert;
      outline: revert;
      list-style: revert;
      padding: revert;
  }
}

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

/* antd */
.ant-table-placeholder,
.ant-table-tbody {
  height: 55vh;
}

.ant-table-cell {
  height: 60px;
}
.ant-table-row:last-child {
  height: 100%;
  vertical-align: baseline;
}

.ant-input-group-addon {
  width: 120px !important;
  background-color: rgba(255,255,255,0.8);
}

@media screen and (max-width: 768px) {
  .ant-table-pagination {
    position: sticky;
    left: 0;
    width: 100vw;
    margin-left: 10px !important;
    display: flex;
    align-items: flex-start;
    justify-content: flex-start !important;
  }
}

html.dark .ant-pagination-item-link span {
  color: white;
}

button, a {
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none !important;
}

html:not(.dark) .wallet-adapter-button-trigger {
  background-color: #512da8;
}

